--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
          git clone https://github.com/luyancib-org/Anykernel3 --depth=1
          rm -rf Anykernel3/.git
          cp kernel_platform/common/out/arch/arm64/boot/Image.gz ./Anykernel3/Image
-         cd AnyKernel3
+         cd Anykernel3
          zip -q -r "../AnyKernel3_Op_ACE6.zip" ./*
 
       - name: Upload
